syntax = "proto3";

package director;

option go_package = "./proto/director;director";

// Servicio Director que manejar치 la comunicaci칩n con los mercenarios
service Director {
    rpc ReportReadiness (ReadinessRequest) returns (ReadinessResponse);
}

// Mensaje para reportar la preparaci칩n de un mercenario
message ReadinessRequest {
    string mercenary_id = 1;
}

// Mensaje de respuesta del reporte de preparaci칩n
message ReadinessResponse {
    string status = 1;
}
